# sauna-newsletter

./: .env.example  .gitignore  .mcp.json  DEPLOYMENT.md  README.md  build_newsletter.py  draft.py  gather.py  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: daily-news-scrape.yml
.pw-profile/: Local State
.pw-profile/Default/: Cookies  DIPS-wal  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
.pw-profile/GrShaderCache/: index
.pw-profile/GraphiteDawnCache/: data_0  data_1  data_2  f_000001  index
.pw-profile/ShaderCache/: index
.pw-profile/segmentation_platform/: ukm_db
data/: event_frequency_analysis.csv  sauna_list_london_v1.csv  sauna_list_london_v2.csv  sauna_list_london_v3.csv
data/artifacts/: london-sauna-scene-2025-2026.md
data/raw/: 20260127_214331_raw_inputs.json  20260131_075041_raw_inputs.json
database/: schema.sql
src/: __init__.py  workflow.py
src/agents/: __init__.py  claude_orchestrator.py  london_sauna_context.py  newsletter_template.py  publish_agent.py
src/models/: __init__.py  scraped_event.py  types.py
src/scripts/: aggregate_sauna_schedules.py  cleanup_bad_emails.py  clear_news.py  list_drafts.py  (+6 more)
tests/: test_draft_dry_run.py  test_notion_api.py  test_notion_create_page.py  test_notion_query.py  test_notion_read_write.py  test_notion_search.py  test_reading_corner.py  test_reading_corner_live.py  test_setup.py
website/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
(+329 files in other folders)
